fix search box shadow on dark mode

--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -5,6 +5,6 @@
   outline: 0;
   background: var(--color-white);
   color: var(--color-dark-grey);
-  box-shadow: 0 3px 6px 0 $light-grey;
+  box-shadow: 0 3px 6px 0 var(--color-light-grey);
   font-size: 2.4rem;
 }
